feat: add order confirmation flow and cash management
Replace immediate order execution with explicit confirmation step.
Add cash balance query endpoint to portfolio service.

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>